--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "lucide-react": "^0.436.0",
-    "next": "14.2.7",
+    "next": "^14.2.12",
     "react": "^18",
     "react-dom": "^18",
     "react-spring": "^9.7.4"
